# btp-daemon

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md
common/: README  ap_type_list_v.hpp  fas_statistics.hpp  json_double.hpp  lock_atomic.hpp  misc.hpp  params.cpp  params.h  udp.hpp
common/aspect/: ad_exception.hpp  json_aspect.hpp  rn_json_aspect.hpp
fas/: README  fas-config.h  unp.h  unpp.h
fas/adv/: ad_cleaner.hpp  ad_clock.hpp  ad_concurrent.hpp  ad_mutex.hpp  ad_named_proxy.hpp  ad_proxy.hpp  ad_speedometr.hpp  ad_state.hpp  ad_stub.hpp
fas/aop/: advice.hpp  aop.hpp  aspect.hpp  call_point.hpp  introduction.hpp  tag.hpp
fas/filter/: basic_filter.hpp  binary_filter.hpp
fas/inet/: _mt_server.hpp  client.hpp  connection.hpp  constants.hpp  iconnection.hpp  inet_visitors.hpp  ipool.hpp  mt_server.hpp  pool.hpp  pool.hpp.rej  pooled_item.hpp  server.hpp  smart_client.hpp  types.hpp
fas/misc/: json.hpp  stat.hpp
fas/mux/: best_mux.hpp  epoller.hpp  imux.hpp  imux_observer.hpp  mux_filter.hpp  selector.hpp  types.hpp
fas/pattern/: composite.hpp  conversion.hpp  dynamic_interface.hpp  final.hpp  linear_hierarchy.hpp  nth_cast.hpp  observer.hpp  pattern.hpp  ref.hpp  scatter_hierarchy.hpp  singleton.hpp  state.hpp  static_check.hpp  type_list.hpp  visitor.hpp
fas/system/: inet.hpp  system.hpp  thread.hpp  types.hpp
src/: bgthreads.hpp  btpdata.hpp  buffered_kc.hpp  codictionary.hpp  counters.hpp  daemon.cpp  dictionary.hpp  fas_methods.hpp  fas_queries.hpp  kc_setbulk.hpp  rrstorage_periodical.hpp  rrstorage_single.hpp  types.hpp
(+36 files in other folders)
